# dino-game

./: .gitignore  Cargo.toml  README.md  build_web.sh
src/: cactus.rs  components.rs  constants.rs  main.rs  resources.rs  states.rs
src/systems/: background.rs  camera.rs  collision.rs
src/systems/game/: end.rs  pause.rs  setup.rs
src/systems/obstacles/: cactus.rs  collision.rs  movement.rs
src/systems/player/: animation.rs  health.rs  movement.rs
static/: index.html  my_bevy_game.js
