[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16"
rand_core = "0.9"
bevy_rand = "0.11"
bevy_prng = { version = "0.11", features = ["wyrand"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
bevy_image = "0.16.1"
uuid = { version = "1.3", features = ["v4", "js"] }  # Add js feature for WASM
wasm-bindgen = "0.2.100"   # Required for WASM RNG
console_error_panic_hook = { version = "0.1.7", optional = true }
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window"] }
console_error_panic_hook = "0.1.7"  # Required for WASM error handling

[profile.web]
inherits = "release"
lto = true
strip = true
incremental = true
opt-level = "s"